# paddle-toolbox

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: paddle-toolbox-test.yml
pptb/: __init__.py  exceptions.py
pptb/nn/: __init__.py  functional.py  layer.py  loss.py
pptb/optimizer/: lr.py
pptb/tools/: __init__.py  mixing.py  mixup.py
pptb/utils/: paddle_version.py  version_checker.py
pptb/vision/models/: __init__.py  convmixer.py  densenet.py  googlenet.py  inceptionv3.py  mobilenetv3.py  resnext.py  shufflenetv2.py
tests/: test_nn.py  test_optimizer.py  test_pptb.py  test_tools.py  test_vision_models.py
