[tool.poetry]
name = "paddle-toolbox"
version = "0.1.0"
description = ""
authors = ["Nyakku Shigure <sigure.qaq@gmail.com>"]
keywords = ["python", "paddle", "toolbox"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
